# godot-onnx

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: build-dawn.yml  ci.yml
docs/: BUILD.md  LAYOUT.md  SCENES.md  TESTING.md  USAGE.md  WEB_BACKENDS.md
misc/: build.janet  build.ps1  build.sh  check-license-headers.py  retry_build.ps1  setup_gnu.ps1
sample/: godot-onnx.gdextension  main.gd  main.tscn  project.godot
sample/addons/godot-onnx/: import_plugin.gd  plugin.cfg  plugin.gd
sample/models/: create_benchmark_onnx.py  create_identity_onnx.py  create_matmul_onnx.py  download_onnx_models.py  esrgan_input.raw  generate_esrgan_input.py
sample/scenes/main/: esrgan_texture.gd  main.tscn  progress.gd
sample/scripts/: export_inference_images.gd  test_inference.gd
src/: lib.rs  model_data.rs  module.rs  prop_tests.rs  sync_cell.rs  tensor.rs
