[package]
name = "godot-onnx"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext.git", features = ["register-docs"] }
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }
ndarray = "0.17"

# Linux: WebGPU execution provider (Dawn)
[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "2.0.0-rc.11", features = ["ndarray", "webgpu"] }

# Windows: DirectML execution provider
[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "2.0.0-rc.11", features = ["ndarray", "directml"] }

# macOS: CoreML execution provider
[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.11", features = ["ndarray", "coreml"] }

# iOS: CoreML only
[target.'cfg(target_os = "ios")'.dependencies]
ort = { version = "2.0.0-rc.11", features = ["ndarray", "coreml"] }

# Android: CPU + NNAPI
[target.'cfg(target_os = "android")'.dependencies]
ort = { version = "2.0.0-rc.11", features = ["ndarray", "nnapi"] }

[features]
default = ["godot/api-4-5", "threads"]
threads = ["godot/experimental-threads"]
# Build for Godot compiled with precision=double. Requires GODOT4_BIN. Use: cargo build --release --no-default-features --features double-precision
double-precision = ["godot/api-custom", "godot/double-precision"]

[dev-dependencies]
image = "0.24"
proptest = "1.5"
